# SoliditySHA3Miner

./: .gitignore  LICENSE  README.md  SoliditySHA3Miner.code-workspace  SoliditySHA3Miner.sln
CPUSoliditySHA3Solver/: CMakeLists.txt  CPUSoliditySHA3Solver.vcxproj  CPUSoliditySHA3Solver.vcxproj.filters  Resource.aps  Resource.rc  cpuSolver.cpp  cpuSolver.h  instance.h  sha3.cpp  solver.cpp  solver.h  types.h
CPUSoliditySHA3Solver/managed/: ManagedObject.h  solver.cpp  solver.h
CPUSoliditySHA3Solver/sha3/: keccak-tiny.c  keccak-tiny.h  sha3-midstate.c  sha3-midstate.h
CPUSoliditySHA3Solver/uint256/: compat_byteswap.h  uint256.cpp
CPUSoliditySHA3Solver/x64/Debug/: Resource.res
CPUSoliditySHA3Solver/x64/Release/: Resource.res
CudaSoliditySHA3Solver/: CMakeLists.txt  CudaSoliditySHA3Solver.vcxproj  CudaSoliditySHA3Solver.vcxproj.filters  Resource.aps  Resource.rc  cudaErrorCheck.cu  cudaSha3.cu  cudaSha3King.cu  cudaSolver.cpp  cudaSolver.h  solver.cpp  solver.h  types.h
CudaSoliditySHA3Solver/device/: device.cpp  device.h  instance.h  nv_api.cpp  nv_api.h  nv_apiEnum.h  nvapi.cpp  nvapi.h  nvapiEnum.h
CudaSoliditySHA3Solver/managed/: ManagedObject.h  solver.cpp  solver.h
CudaSoliditySHA3Solver/sph/: sph_types.h
CudaSoliditySHA3Solver/uint256/: compat_endian.h  tinyformat.h  uint256.h
OpenCLSoliditySHA3Solver/: CMakeLists.txt  OpenCLSoliditySHA3Solver.filters  OpenCLSoliditySHA3Solver.vcxproj  OpenCLSoliditySHA3Solver.vcxproj.filters  Resource.aps  Resource.rc  cl_error.hpp  openCLSolver.cpp  openCLSolver.h  sha3.h  sha3Kernel.cl  sha3kingKernel.cl  solver.cpp  solver.h  types.h
OpenCLSoliditySHA3Solver/device/: adl_api.cpp  adl_api.h  device.cpp  device.h  instance.h
OpenCLSoliditySHA3Solver/managed/: managedObject.h  solver.cpp  solver.h
OpenCLSoliditySHA3Solver/sph/: keccak.cpp
OpenCLSoliditySHA3Solver/uint256/: arith_uint256.cpp  arith_uint256.h  crypto_common.h  utilstrencodings.cpp  utilstrencodings.h
OpenCLSoliditySHA3Solver/x64/Debug/: Resource.res
OpenCLSoliditySHA3Solver/x64/Release/: Resource.res
SoliditySHA3Miner/: 0xCATE.abi  0xLTC.abi  0xbtc.abi  0xbtcPool-allDevices.bat  0xbtcPool-ethOS-screen.sh  0xbtcPool-ethOS.sh  0xbtcPool.bat  0xbtcPool.sh  0xbtcSolo.bat  0xbtcSolo.sh  App.config  CLM.abi  Config.cs  ERC-541.abi  ERC-918.abi  GuideForEthOS.txt  GuideForHiveOS.txt  GuideForPoolMining.txt  GuideForSoloMining.txt  Program.cs  Readme.txt  SKO.abi  SoliditySHA3Miner.bat  SoliditySHA3Miner.conf  SoliditySHA3Miner.csproj  SoliditySHA3Miner.sh  clmSolo.bat  clmSolo.sh  install-deps-ethOS.sh  install-deps.sh  packages.config
SoliditySHA3Miner/ABI/: ERC-20.abi  ERC-541.abi  ERC-918.abi
SoliditySHA3Miner/API/: Ccminer.cs  Json.cs
SoliditySHA3Miner/HiveOS/: h-config.sh  h-manifest.conf  h-run.sh  h-stats.sh
SoliditySHA3Miner/Kernels/OpenCL/: sha3KingKernel.cl
SoliditySHA3Miner/Miner/: CPU.cs  CUDA.cs  DeviceBase.cs  DeviceCL.cs  DeviceCPU.cs  DeviceCUDA.cs  IMiner.cs  MasterInterface.cs  MinerBase.cs  OpenCL.cs  Work.cs
SoliditySHA3Miner/Miner/API/: AmdLinuxQuery.cs  NvSMI.cs
SoliditySHA3Miner/Miner/Device/: CPU.cs  CUDA.cs  DeviceBase.cs  OpenCL.cs
SoliditySHA3Miner/Miner/Helper/: CPU.cs  CUDA.cs  OpenCL.cs
SoliditySHA3Miner/Miner/Kernels/OpenCL/: sha3Kernel.cl  sha3KingKernel.cl
SoliditySHA3Miner/MiningGuide/: GuideForEthOS.txt  GuideForHiveOS.txt  GuideForMasterSlaveMining.txt  GuideForPoolMining.txt  GuideForSoloMining.txt
SoliditySHA3Miner/NetworkInterface/: CLM_contractProgress.cs  INetworkInterface.cs  MasterInterface.cs  MiningParameters.cs  NetworkInterfaceBase.cs  PoolInterface.cs  SlaveInterface.cs  Web3Interface.cs
SoliditySHA3Miner/Properties/: AssemblyInfo.cs  Resources.Designer.cs  Resources.resx
SoliditySHA3Miner/Properties/PublishProfiles/: Publish.pubxml
SoliditySHA3Miner/Scripts/: 0xbtcPool-allDevices.bat  0xbtcPool-ethOS-screen.sh  0xbtcPool-ethOS.sh  0xbtcPool.bat  0xbtcPool.sh  0xbtcPoolMaster.bat  0xbtcPoolMaster.sh  0xbtcSolo.bat  0xbtcSolo.sh  0xbtcSoloMaster.bat  0xbtcSoloMaster.sh  SoliditySHA3Miner.bat  SoliditySHA3MinerSlave.bat  SoliditySHA3MinerSlave.sh  clmSolo.bat  clmSolo.sh  install-deps-ethOS.sh  install-deps.sh
SoliditySHA3Miner/Structs/: DeviceCL.cs  DeviceCPU.cs  DeviceCUDA.cs  DeviceCommon.cs  Dim3.cs
SoliditySHA3Miner/Utils/: Json.cs  Numerics.cs
x64/Release/: 0xGOLD.abi
